examples/test/testpolicy18111.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18111
  namespace: namespace488
spec:
  podSelector:
    matchLabels:
      key21: value38
      key31: value34
      key47: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value38
          key39: value49
      podSelector:
        matchLabels:
          key38: value21
          key11: value19
          key13: value31
